2011-04-27  Ryuan Choi  <ryuan.choi@samsung.com>

        Reviewed by Martin Robinson.

        [GTK] Add proxy support to GtkLauncher
        https://bugs.webkit.org/show_bug.cgi?id=58852

        Add SOUP_TYPE_PROXY_RESOLVER_DEFAULT feature or set SOUP_SESSION_PROXY_URI for developers behind proxy.

        * GNUmakefile.am:
        * GtkLauncher/main.c:
        (main):

2011-04-27  Annie Sullivan  <sullivan@chromium.org>

        Reviewed by David Levin.

        Adding myself as a Chromium contributor to committers.py.

        https://bugs.webkit.org/show_bug.cgi?id=59576

        * Scripts/webkitpy/common/config/committers.py:

2011-04-26  David Grogan  <dgrogan@chromium.org>

        Reviewed by David Levin.

        Adding myself to Chromium contributors list in committers.py
        https://bugs.webkit.org/show_bug.cgi?id=59565

        * Scripts/webkitpy/common/config/committers.py:

2011-04-26  Chang Shu  <cshu@webkit.org>

        Reviewed by Laszlo Gombos.

        WebKitTestRunner needs layoutTestController.addOriginAccessWhitelistEntry
        https://bugs.webkit.org/show_bug.cgi?id=42544

        Also implemented removeOriginAccessWhitelistEntry and resetOriginAccessWhitelists.

        * WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl:
        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::beginTesting):
        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
        (WTR::LayoutTestController::addOriginAccessWhitelistEntry):
        (WTR::LayoutTestController::removeOriginAccessWhitelistEntry):
        * WebKitTestRunner/InjectedBundle/LayoutTestController.h:

2011-04-26  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Adele Peterson.

        AX: Add more text marker routines to DRT
        https://bugs.webkit.org/show_bug.cgi?id=58949

        Add a few more methods to help test the text marker system, including nextMarker, previousMarker and