@@ -1,17 +1,16 @@
-#!/usr/bin/env python
-# Copyright (C) 2010 Google Inc. All rights reserved.
+# Copyright (C) 2011 Google Inc. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are
 # met:
 #
-#     * Redistributions of source code must retain the above copyright
+#    * Redistributions of source code must retain the above copyright
 # notice, this list of conditions and the following disclaimer.
-#     * Redistributions in binary form must reproduce the above
+#    * Redistributions in binary form must reproduce the above
 # copyright notice, this list of conditions and the following disclaimer
 # in the documentation and/or other materials provided with the
 # distribution.
-#     * Neither the name of Google Inc. nor the names of its
+#    * Neither the name of Google Inc. nor the names of its
 # contributors may be used to endorse or promote products derived from
 # this software without specific prior written permission.
 #
@@ -27,10 +26,19 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-"""Port-specific entrypoints for the layout tests test infrastructure."""
-
-from factory import get
-
-from test import unit_test_filesystem
-
 import builders
+import unittest
+
+
+class BuildersTest(unittest.TestCase):
+    def test_path_from_name(self):
+        tests = {
+            'test': 'test',
+            'Mac 10.6 (dbg)(1)': 'Mac_10_6__dbg__1_',
+            '(.) ': '____',
+        }
+        for name, expected in tests.items():
+            self.assertEquals(expected, builders._path_from_name(name))
+
+if __name__ == '__main__':
+    unittest.main()
