@@ -1,3 +1,15 @@
+2011-04-27  James Kozianski  <koz@chromium.org>
+
+        Reviewed by Ojan Vafai.
+
+        Extract map from port to builder name.
+        https://bugs.webkit.org/show_bug.cgi?id=58301
+
+        * Scripts/webkitpy/layout_tests/port/__init__.py:
+        * Scripts/webkitpy/layout_tests/port/builders.py: Added.
+        * Scripts/webkitpy/layout_tests/port/builders_unittest.py: Added.
+        * Scripts/webkitpy/layout_tests/port/factory.py:
+
 2011-04-27  Ryuan Choi  <ryuan.choi@samsung.com>
 
         Reviewed by Martin Robinson.
